--- a/arkanoid.html
+++ b/arkanoid.html
@@ -18,7 +18,7 @@
     <div class="Live"><b>1UP</div></b>
     <div class="Gijon"><b>GIJON</div></b>
     <div class="Christian"><b>CHRISTIAN BAZAN</div></b>
-    <div class="bloque"></div>
+    <div class="bloque" id="bloque"></div>
     <div class="ball"></div>
     <div class="bloque1"></div>
     <div class="bloque2"></div>
